# ml_cs231n_cpp

./: CMakeLists.txt  README.md  aux.cpp  aux.h  cifar_reader.cpp  cifar_reader.h  classifier.cpp  classifier.h  ensambles.cpp  fisheryatesshuffle.cpp  fisheryatesshuffle.h  get_datasets.sh  linearsoftmax.cpp  linearsoftmax.h  linearsvm.cpp  linearsvm.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrix.cpp  matrix.h  simplenet_main.cpp  simplenet_ui.cpp  simplenet_ui.h  simplenet_ui.ui  simpleneuralnet.cpp  simpleneuralnet.h  test.cpp  test_fisheryatesshuffle.cpp  test_simpleneuralnetwork.cpp
include/classifiers/: aux.h  cifar_reader.h  classifier.h  fisheryatesshuffle.h  linearsoftmax.h  linearsvm.h  mainwindow.h  simplenet_ui.h  simpleneuralnet.h
src/: aux.cpp  cifar_reader.cpp  classifier.cpp  ensambles.cpp  fisheryatesshuffle.cpp  linearsoftmax.cpp  linearsvm.cpp  main.cpp  mainwindow.cpp  simplenet_main.cpp  simplenet_ui.cpp  simpleneuralnet.cpp
test/: test_fisheryatesshuffle.cpp  test_simpleneuralnetwork.cpp
ui/: mainwindow.ui
